# Image-Matching-Benchmark

./: README.md
Algorithms/: CMakeLists.txt  ReadMe.txt  RunAlgorithm.m  RunAlgorithms.cpp  RunAlgorithms2.cpp  gms_matcher.h
Dataset/: ReadMe.txt
Dataset/01-office/: camera.txt  pairs.txt
Dataset/01-office/Results/: akaze_gms.txt  akaze_ratio.txt  brisk_gms.txt  brisk_ratio.txt  kaze_gms.txt  kaze_ratio.txt  orb_gms.txt  orb_ratio.txt  sift_gms.txt  sift_ratio.txt  surf_gms.txt  surf_ratio.txt
Dataset/01-office/Results2/: akaze_gms.txt  akaze_ratio.txt  brisk_gms.txt  brisk_ratio.txt  kaze_gms.txt  kaze_ratio.txt  orb_gms.txt  orb_ratio.txt  sift_gms.txt  sift_ratio.txt  surf_gms.txt  surf_ratio.txt
Dataset/02-teddy/: camera.txt  pairs.txt
Dataset/02-teddy/Results/: akaze_gms.txt  akaze_ratio.txt  brisk_gms.txt  brisk_ratio.txt  kaze_gms.txt  kaze_ratio.txt  orb_gms.txt  orb_ratio.txt  sift_gms.txt  sift_ratio.txt  surf_gms.txt  surf_ratio.txt
Dataset/02-teddy/Results2/: akaze_gms.txt  akaze_ratio.txt  brisk_gms.txt  brisk_ratio.txt  kaze_gms.txt  kaze_ratio.txt  orb_gms.txt  orb_ratio.txt  sift_gms.txt  sift_ratio.txt  surf_gms.txt  surf_ratio.txt
Dataset/03-large-cabinet/: pairs.txt
Dataset/03-large-cabinet/Results/: akaze_gms.txt  akaze_ratio.txt  brisk_gms.txt  brisk_ratio.txt  kaze_gms.txt  (+7 more)
Dataset/04-kitti/: camera.txt  pairs.txt
Dataset/05-castle/: pairs.txt
Dataset/06-office-wide/: pairs.txt
Dataset/07-teddy-wide/: pairs.txt
Dataset/08-large-cabinet-wide/: pairs.txt
Evaluation/: Evaluate.m  PlotResults.m  PlotResults2.m  ReadMe.txt
(+108 files in other folders)
